# Mini_SIP_server_RUST

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.htm  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: call_map.rs  lib.rs  main.rs  network_utils.rs  parsing.rs  sip_defs.rs  worker.rs
tests/: call_map_property.rs  call_map_tests.rs  integration_sip_flow.rs  network_utils_tests.rs  parsing_negative_cases.rs  parsing_tests.rs
tests/common/: mod.rs
